# studifi

./: .env  .gitignore  BACKEND_IMPLEMENTATION_GUIDE.md  Cargo.toml  KYC_IMPLEMENTATION.md  PHASE_1_IMPLEMENTATION_SUMMARY.md  README.md  TUTORIAL_IMPLEMENTATION_SUMMARY.md  TUTORIAL_SYSTEM_DEMO.md  TUTORIAL_SYSTEM_DEMO_WALKTHROUGH.md  canister_ids.json  dfx.json  docker-compose.yml  juno.config.mjs  next.config.mjs  package-lock.json  package.json  query
.dfx/local/: canister_ids.json  network-id
.dfx/local/lsp/: vg3po-ix777-77774-qaafa-cai.did
.next/: app-build-manifest.json  trace
.next/cache/: .rscinfo
.next/server/: next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json
.next/server/app/: page.js  page_client-reference-manifest.js
.next/static/chunks/: 2f4bb_internal_font_google_tDbV2o_flEEny0FZhsfKu5WU4xD0OwGtT0rU3BE-s_woff2_ba3284f5._.css  2f4bb_internal_font_google_tDbV2o_flEEny0FZhsfKu5WU4xD1OwGtT0rU3BE-s_woff2_ba3284f5._.css  2f4bb_internal_font_google_tDbV2o_flEEny0FZhsfKu5WU4xD2OwGtT0rU3BE-s_woff2_ba3284f5._.css  2f4bb_internal_font_google_tDbV2o_flEEny0FZhsfKu5WU4xD4OwGtT0rU3BE-s_woff2_ba3284f5._.css  [root of the server]__88580c78._.css  (+25 more)
public/workers/: auth.worker.js  auth.worker.js.map
src/app/: globals.css  layout.tsx  page.tsx
src/components/: auth.tsx  backdrop.tsx  background.tsx  banner.tsx  button.tsx  delete.tsx  login.tsx  modal.tsx  table.tsx
src/studifi_backend/: autonomous_finance.mo  compliance_gateway.mo  governance_engine.mo  identity_manager.mo  intelligent_credit.mo  todo.md
src/studifi_backend/authentication_service/: Cargo.toml  authentication_service.did
src/studifi_backend/authentication_service/src/: lib.rs  storage.rs  types.rs
src/studifi_backend/student_identity_service/: Cargo.toml
src/studifi_backend/student_identity_service/src/: verifiable_credentials.rs
src/studifi_frontend/: .env  index.html  package.json  vite.config.js
(+199 files in other folders)
