[workspace]
members = [
    "src/backend/autonomous_finance",
    "src/backend/compliance_gateway",
    "src/backend/governance_engine",
    "src/backend/identity_manager",
    "src/backend/intelligent_credit",
    "src/backend/shared"
]
resolver = "2"

[workspace.dependencies]
candid = "0.10"
ic-cdk = "0.17"
ic-cdk-timers = "0.11"
ic-stable-structures = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"