[workspace]
members = [
    "src/studifi_backend/autonomous_finance",
    "src/studifi_backend/compliance_gateway",
    "src/studifi_backend/governance_engine",
    "src/studifi_backend/identity_manager",
    "src/studifi_backend/intelligent_credit",
    "src/studifi_backend/university_issuer",
    "src/studifi_backend/shared"
]
resolver = "2"

[workspace.dependencies]
candid = "0.10"
ic-cdk = "0.17"
ic-cdk-timers = "0.11"
ic-stable-structures = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"