[package]
name = "authentication_service"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.13"
ic-stable-structures = "0.6"
serde = { version = "1.0", features = ["derive"] }
shared = { path = "../shared" }

[dependencies.ic-cdk-timers]
version = "0.7"
